0025801: Some of the commands in BOPTest packages show the execution time without -t key

Unnecessary output of the execution time has been removed in the following commands:
 - bopcheck
 - bfillds
 - bbuild
 - bbop

Test case for issue CR25801